# ai-study

./: .gitignore  .gitmodules  configure.sh  destroy_remote.py  pyproject.toml  setup_remote.py  setup_remote.sh
ALIGN/: .gitignore  main.ipynb  plotly_tools.py
AudioCLIP/: .gitignore  dataset_utils.py  pydantic_models.py
CLIP/: .gitignore  get_data.py  main.ipynb  main.py  plotly_tools.py
MiniGPT-4/: .gitignore  configure.sh  main.ipynb  makemd.py  run_gradio.sh
StableDiffusion/: .gitignore  configure.sh  experiments.json  helper.py  interpolations.py  main.ipynb
