[project]
name = "aisogang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "dash>=3.2.0",
    "datasets>=4.1.0",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ftfy>=6.3.1",
    "hf-xet>=1.1.10",
    "huggingface-hub[cli,inference]>=0.35.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "librosa>=0.11.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numba==0.61.2",
    "numpy==2.2",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "pytorch-ignite>=0.5.2",
    "pytube>=15.0.0",
    "qrcode>=8.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.0",
    "seaborn>=0.13.2",
    "simplejpeg>=1.8.2",
    "termcolor>=3.1.0",
    "torch>=2.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "umap-learn[plot]>=0.5.9.post2",
    "visdom>=0.2.4",
    "wandb>=0.21.4",
    "yt-dlp>=2025.9.26",
]
