[project]
name = "aisogang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bitsandbytes",
    "bs4>=0.0.2",
    "dash>=3.2.0",
    "datasets>=4.1.0",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ftfy>=6.3.1",
    "gradio-client>=1.13.3",
    "hf-xet>=1.1.10",
    "huggingface-hub[cli,inference]>=0.35.0",
    "iopath>=0.1.10",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyter-archive>=3.4.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "librosa>=0.11.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numba==0.61.2",
    "numpy==2.2",
    "omegaconf>=2.3.0",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "peft==0.10.0",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "pytorch-ignite>=0.5.2",
    "pytube>=15.0.0",
    "qrcode>=8.2",
    "runpod>=1.7.13",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "simplejpeg>=1.8.2",
    "termcolor>=3.1.0",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "umap-learn[plot]>=0.5.9.post2",
    "visdom>=0.2.4",
    "visual-genome>=1.1.1",
    "wandb>=0.21.4",
    "webdataset>=1.0.2",
    "websockets==13.0",
    "yt-dlp>=2025.9.26",
]

[tool.uv.sources]
bitsandbytes = { git = "https://github.com/bitsandbytes-foundation/bitsandbytes.git" }
